fix horizontal scrolling on mobile

--- a/client/src/photos/photos.css
+++ b/client/src/photos/photos.css
@@ -4,8 +4,10 @@
   border-left: solid black 10px;
   border-right: solid black 10px;
   text-align: center;
-  overflow: auto;
+  overflow-x: scroll;
+  overflow-y: scroll;
   transform: translateY(50px);
+  -webkit-overflow-scrolling: touch;
 }
 
 .item {
